--- a/index.html
+++ b/index.html
@@ -17,13 +17,11 @@
     <meta name="twitter:card" content="summary_large_image" />
 
     <link rel="icon" href="_assets/logo.svg" type="image/x-icon" />
-    <link
-      rel="stylesheet"
-      href="https://unpkg.com/docsify/lib/themes/pure.css"
-    />
-    <!--
-    <link rel="stylesheet" href="https://unpkg.com/docsify/lib/themes/vue.css" />
-  -->
+    
+    <!-- >> lib-styles >> -->
+    <link rel="stylesheet" href="./_lib/pure@4.13.1.css" />
+    <!-- << lib-styles << -->
+    
     <link rel="stylesheet" href="_theme/styles.css" />
   </head>
   <body>
@@ -69,19 +67,17 @@
         },
       };
     </script>
-    <!-- Docsify -->
-    <script src="https://unpkg.com/docsify/lib/docsify.min.js"></script>
-    <script src="https://unpkg.com/docsify/lib/plugins/search.min.js"></script>
 
-    <!-- Additional Plugins -->
-    <script src="https://unpkg.com/docsify-copy-code"></script>
-    <script src="https://unpkg.com/docsify-pagination/dist/docsify-pagination.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/docsify-tabs"></script>
-
-    <!-- Prism -->
-    <script src="https://unpkg.com/prismjs/components/prism-typescript.min.js"></script>
-    <script src="https://unpkg.com/prismjs/components/prism-jsx.min.js"></script>
-    <script src="https://unpkg.com/prismjs/components/prism-tsx.min.js"></script>
-    <script src="https://unpkg.com/prismjs/components/prism-bash.min.js"></script>
+    <!-- >> lib-scripts >> -->
+    <script src="./_lib/docsify@4.13.1.min.js"></script>
+    <script src="./_lib/search@4.13.1.min.js"></script>
+    <script src="./_lib/docsify-copy-code@3.0.0.min.js"></script>
+    <script src="./_lib/docsify-pagination@2.10.1.min.js"></script>
+    <script src="./_lib/docsify-tabs@1.6.3.min.js"></script>
+    <script src="./_lib/prism-typescript@1.29.0.min.js"></script>
+    <script src="./_lib/prism-jsx@1.29.0.min.js"></script>
+    <script src="./_lib/prism-tsx@1.29.0.min.js"></script>
+    <script src="./_lib/prism-bash@1.29.0.min.js"></script>
+    <!-- << lib-scripts << -->
   </body>
 </html>
