--- a/index.html
+++ b/index.html
@@ -10,17 +10,26 @@
 
     <title>yaasl</title>
     <meta name="application-name" content="yaasl" />
-    <meta name="description" content="A state management library to swiftly create small reactive stores in your UI while keeping the boilerplate at a minimum." />
+    <meta
+      name="description"
+      content="A state management library to swiftly create small reactive stores in your UI while keeping the boilerplate at a minimum."
+    />
     <meta name="author" content="PrettyCoffee" />
 
     <meta name="twitter:title" content="yaasl" />
-    <meta name="twitter:description" content="A state management library to swiftly create small reactive stores in your UI while keeping the boilerplate at a minimum." />
-    <meta name="twitter:image" content="_assets/logo-large.svg" />
+    <meta
+      name="twitter:description"
+      content="A state management library to swiftly create small reactive stores in your UI while keeping the boilerplate at a minimum."
+    />
+    <meta name="twitter:image" content="_assets/logo-large.png" />
     <meta name="twitter:card" content="summary_large_image" />
 
     <meta property="og:title" content="yaasl" />
-    <meta property="og:description" content="A state management library to swiftly create small reactive stores in your UI while keeping the boilerplate at a minimum." />
-    <meta property="og:image" content="_assets/logo-large.svg" />
+    <meta
+      property="og:description"
+      content="A state management library to swiftly create small reactive stores in your UI while keeping the boilerplate at a minimum."
+    />
+    <meta property="og:image" content="_assets/logo-large.png" />
     <meta property="og:url" content="https://prettycoffee.github.io/yaasl/" />
 
     <link rel="icon" href="_assets/logo.svg" type="image/x-icon" />
