chore: Publish docs

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       name="twitter:description"
       content="A state management library to swiftly create small reactive stores in your UI while keeping the boilerplate at a minimum."
     />
-    <meta name="twitter:image" content="_assets/logo-large.png" />
+    <meta name="twitter:image" content="./_assets/logo-large.png" />
     <meta name="twitter:card" content="summary_large_image" />
 
     <meta property="og:title" content="yaasl" />
@@ -29,16 +29,16 @@
       property="og:description"
       content="A state management library to swiftly create small reactive stores in your UI while keeping the boilerplate at a minimum."
     />
-    <meta property="og:image" content="_assets/logo-large.png" />
+    <meta property="og:image" content="./_assets/logo-large.png" />
     <meta property="og:url" content="https://prettycoffee.github.io/yaasl/" />
 
-    <link rel="icon" href="_assets/logo.svg" type="image/x-icon" />
+    <link rel="icon" href="./_assets/logo.svg" type="image/x-icon" />
 
     <!-- >> lib-styles >> -->
     <link rel="stylesheet" href="./_lib/pure@4.13.1.css" />
     <!-- << lib-styles << -->
 
-    <link rel="stylesheet" href="_theme/styles.css" />
+    <link rel="stylesheet" href="./_theme/styles.css" />
   </head>
   <body>
     <div id="app"></div>
@@ -46,7 +46,7 @@
     <script>
       window.$docsify = {
         name: "yaasl",
-        logo: "_assets/logo-large.svg",
+        logo: "./_assets/logo-large.svg",
         repo: "https://github.com/PrettyCoffee/yaasl",
         loadSidebar: true,
         subMaxLevel: 2,
