--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       name="twitter:description"
       content="A state management library to swiftly create small reactive stores in your UI while keeping the boilerplate at a minimum."
     />
-    <meta name="twitter:image" content="/yaasl/_assets/logo-large.svg" />
+    <meta name="twitter:image" content="/yaasl/_assets/logo.svg" />
     <meta name="twitter:card" content="summary_large_image" />
 
     <meta property="og:title" content="yaasl" />
@@ -29,7 +29,7 @@
       property="og:description"
       content="A state management library to swiftly create small reactive stores in your UI while keeping the boilerplate at a minimum."
     />
-    <meta property="og:image" content="/yaasl/_assets/logo-large.svg" />
+    <meta property="og:image" content="/yaasl/_assets/logo.svg" />
     <meta property="og:url" content="https://prettycoffee.github.io/yaasl/" />
 
     <link rel="icon" href="_assets/logo.svg" type="image/x-icon" />
